Swap our application back end framework
After some pondering and more work on the UI end, it has been decided
that the best course of action is to re-combine the API and UI portions
into a single project, but using rollup instead of vite so that we
don't have issues with running multiple servers.

This commit is the framework for all of that, and includes some
temporary pages and components just as a proof of concept; these need
to be fleshed out into something more concrete from our other project.

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Ruinous API",
-  "description": "The API portion of the Ruinous Twitch Addons project",
-  "repository": "https://github.com/OdatNurd/ruinous-twitch-api",
-  "logo": "https://github.com/OdatNurd/ruinous-twitch-ui/raw/main/static/ruinous.svg",
+  "name": "Ruinous Addons",
+  "description": "A Ruinous Pile of Twitch Addons",
+  "repository": "https://github.com/OdatNurd/ruinous-twitch-addons",
+  "logo": "https://github.com/OdatNurd/ruinous-twitch-addons/raw/main/static/ruinous.svg",
   "keywords": ["node", "express", "heroku"],
   "image": "heroku/nodejs"
 }
