--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "ksuid": "^3.0.0",
+    "marked": "^4.0.18",
     "node-fetch": "^3.2.10",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2",
