--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dotenv": "^16.0.1",
     "eiows": "^4.1.2",
     "express": "^4.18.1",
+    "express-http-to-https": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "ksuid": "^3.0.0",
     "marked": "^4.0.18",
