--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2",
     "svelte": "^3.50.0",
-    "svelte-navigator": "^3.2.2"
+    "svelte-navigator": "^3.2.2",
+    "winston": "^3.8.2"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.6",
