Introduce nodejs aliases for the server code
This change is an experiment with NodeJS subpath import patterns, which
allow us to set up import aliases that make relative imports a thing of
the past.

We're settled on some names for the core bits of the server code, and
the list will undoubtedly be subject to change as we go forward and
find loopholes or change names to be clearer.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
   "prisma": {
     "seed": "node prisma/seed.js"
   },
+  "imports": {
+    "#core/*": "./src/server/*.js",
+    "#lib/*": "./src/server/lib/*.js",
+    "#routes/*": "./src/server/routes/*.js",
+    "#api/*": "./src/server/routes/api/*.js"
+  },
   "devDependencies": {
     "@axel669/rollup-copy-static": "^0.1.2",
     "@axel669/rollup-dollar-path": "^0.1.0",
