Refactor the seeding data layout to make life good
The upcoming changes are going to need to be able to pull information
about a specific addon, and it is needed at compile time rather than at
runtime.

This restructures the seed data structure to make it easier to get at
the information for specific addons from both the server side and
client side versions of the code, which both need to share the same
information.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "#core/*": "./src/server/*.js",
     "#lib/*": "./src/server/lib/*.js",
     "#routes/*": "./src/server/routes/*.js",
-    "#api/*": "./src/server/routes/api/*.js"
+    "#api/*": "./src/server/routes/api/*.js",
+    "#seed/*": "./prisma/data/*.js"
   },
   "devDependencies": {
     "@axel669/rollup-copy-static": "^0.1.2",
