Turn on compression in the express server
This uses the compression middleware for express to make the size of
loaded files as small as possible. A simple fix to make the page load
at least a 1/2 second faster, give or take (in limited testing).

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@twurple/api": "^5.1.6",
     "@twurple/auth": "^5.1.6",
     "@twurple/chat": "^5.1.6",
+    "compression": "^1.7.4",
     "convict": "^6.2.3",
     "cookie": "^0.5.0",
     "dotenv": "^16.0.1",
