First pass at using Svelte for the overlays
This sets up the boilerplate code that will serve as our code base as we
work through the best way to finalize this change without having any
redundant files.

What we have now is an Overlay component whose job it is to ensure that
it fetches the overlay information it needs from the back end and then,
when it does, renders a component that represents the overlay.

This puts all of the logic directly into the Svelte file, and includes
a custom rollup build plugin that allows us to generate all of the
overlays without having to have multiple copies of the boilerplate code
in place.

--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
   "devDependencies": {
     "@axel669/rollup-copy-static": "^0.1.2",
     "@axel669/rollup-dollar-path": "^0.1.0",
-    "@axel669/rollup-html-input": "^0.1.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.8",
     "daisyui": "^2.25.0",
+    "fs-jetpack": "^5.0.0",
     "postcss": "^8.4.16",
     "prisma": "^4.4.0",
     "rollup": "^2.79.0",
