--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
+    "@labyrinthos/file-routes": "^0.1.5",
     "@prisma/client": "^4.4.0",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-replace": "^4.0.0",
@@ -64,7 +65,7 @@
     "cookie": "^0.5.0",
     "dotenv": "^16.0.1",
     "eiows": "^4.1.2",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "express-http-to-https": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "ksuid": "^3.0.0",
