--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "node src/server",
     "dev": "rollup -c -w",
     "build": "rollup -c",
-    "heroku-postbuild": "yarn build && yarn db:bootstrap"
+    "heroku-postbuild": "yarn build && yarn db:bootstrap",
+    "test": "aegis \"test/**/*.test.{js,mjs}\" test/hooks.js"
   },
   "engines": {
     "node": "16.x",
@@ -35,9 +36,11 @@
     "#routes/*": "./src/server/routes/*.js",
     "#api/*": "./src/server/routes/api/*.js",
     "#addons/*": "./src/addons/*.js",
-    "#seed/*": "./prisma/data/*.js"
+    "#seed/*": "./prisma/data/*.js",
+    "#test/*": "./test/*.js"
   },
   "devDependencies": {
+    "@axel669/aegis": "^0.2.3",
     "@axel669/rollup-copy-static": "^0.1.2",
     "@axel669/rollup-dollar-path": "^0.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
@@ -67,6 +70,7 @@
     "eiows": "^4.1.2",
     "express": "^4.18.2",
     "express-http-to-https": "^1.1.4",
+    "fast-deep-equal": "^3.1.3",
     "jsonwebtoken": "^8.5.1",
     "ksuid": "^3.0.0",
     "marked": "^4.0.18",
