Include testing for other items
This change encompasses adding in tests for the API routes that relate
to:

  * addons associated with a user
  * addons in general
  * overlays for installed addons, including redirects.

This also includes some new code in the setup routines that ensures that
the database is in a consistent state when testing starts (primarily by
deleting things we think might exist and ignoring errors and hoping for
the best, because that's just how we roll) and some new utility
functions.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "dev": "rollup -c -w",
     "build": "rollup -c",
     "heroku-postbuild": "yarn build && yarn db:bootstrap",
-    "test": "aegis \"test/**/*.test.{js,mjs}\" test/hooks.js"
+    "test": "aegis \"test/**/*.test.{js,mjs}\" test/hooks.js",
+    "test-addons": "aegis \"test/addons/**/*.test.{js,mjs}\" test/hooks.js",
+    "test-overlays": "aegis \"test/overlays/**/*.test.{js,mjs}\" test/hooks.js",
+    "test-user": "aegis \"test/user/**/*.test.{js,mjs}\" test/hooks.js"
   },
   "engines": {
     "node": "16.x",
